@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
+         https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -19,127 +19,83 @@
     <description>Projet PI ESPRIT</description>
 
     <properties>
-        <java.version>17</java.version> <!-- Version Java -->
+        <java.version>17</java.version>
         <lombok.version>1.18.30</lombok.version>
     </properties>
 
     <dependencies>
-        <!-- Spring Boot -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
-
-        <!-- Validation -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
-
-        <!-- Mail -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
-
-        <!-- WebSocket -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-websocket</artifactId>
         </dependency>
-
-        <!-- MySQL -->
         <dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
             <scope>runtime</scope>
         </dependency>
-
-        <!-- Lombok for automatic generation of getters, setters, etc. -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>${lombok.version}</version>
-            <scope>provided</scope>
+            <optional>true</optional>
         </dependency>
-
-        <!-- JWT -->
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-api</artifactId>
             <version>0.11.5</version>
         </dependency>
-
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-impl</artifactId>
             <version>0.11.5</version>
             <scope>runtime</scope>
         </dependency>
-
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-jackson</artifactId>
             <version>0.11.5</version>
             <scope>runtime</scope>
         </dependency>
-
-        <!-- Swagger / OpenAPI -->
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>2.3.0</version>
         </dependency>
-
-        <!-- Jsoup -->
         <dependency>
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
             <version>1.17.2</version>
         </dependency>
-
-        <!-- Tests -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
-         <excludes>
-    <exclude>tn/esprit/_4se2/pi/Swagger/Swagger.java</exclude>
-    <exclude>tn/esprit/_4se2/pi/mappers/DoctorMapper.java</exclude>
-    <exclude>tn/esprit/_4se2/pi/mappers/FieldOwnerMapper.java</exclude>
-    <exclude>tn/esprit/_4se2/pi/mappers/FavoriteMapper.java</exclude>
-    <exclude>tn/esprit/_4se2/pi/mappers/ProductMapper.java</exclude>
-    <exclude>tn/esprit/_4se2/pi/mappers/UserMapper.java</exclude>
-    <exclude>tn/esprit/_4se2/pi/mappers/CartMapper.java</exclude>
-    <exclude>tn/esprit/_4se2/pi/mappers/DietPlanMapper.java</exclude>
-    <exclude>tn/esprit/_4se2/pi/mappers/SportSpaceAvailabilityMapper.java</exclude>
-    <exclude>tn/esprit/_4se2/pi/mappers/PlayerMapper.java</exclude>
-    <exclude>tn/esprit/_4se2/pi/mappers/LoyaltyProgramMapper.java</exclude>
-    <exclude>tn/esprit/_4se2/pi/services/FieldOwner/FieldOwnerService.java</exclude>
-    <exclude>tn/esprit/_4se2/pi/services/Player/PlayerService.java</exclude>
-    <exclude>tn/esprit/_4se2/pi/services/AdvertisementService.java</exclude>
-    <exclude>tn/esprit/_4se2/pi/entities/Cart.java</exclude>
-    <exclude>tn/esprit/_4se2/pi/restcontrollers/CartRestController.java</exclude>
-    <exclude>tn/esprit/_4se2/pi/websocket/WebSocketEventHandler.java</exclude>
-</excludes>
 
     <build>
         <plugins>
@@ -148,7 +104,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
-                    <source>${java.version}</source> <!-- Specify Java version -->
+                    <source>${java.version}</source>
                     <target>${java.version}</target>
                     <annotationProcessorPaths>
                         <path>
@@ -157,9 +113,47 @@
                             <version>${lombok.version}</version>
                         </path>
                     </annotationProcessorPaths>
+                    <excludes>
+                        <exclude>tn/esprit/_4se2/pi/Swagger/Swagger.java</exclude>
+                        <exclude>tn/esprit/_4se2/pi/mappers/DoctorMapper.java</exclude>
+                        <exclude>tn/esprit/_4se2/pi/mappers/FieldOwnerMapper.java</exclude>
+                        <exclude>tn/esprit/_4se2/pi/mappers/FavoriteMapper.java</exclude>
+                        <exclude>tn/esprit/_4se2/pi/mappers/ProductMapper.java</exclude>
+                        <exclude>tn/esprit/_4se2/pi/mappers/UserMapper.java</exclude>
+                        <exclude>tn/esprit/_4se2/pi/mappers/CartMapper.java</exclude>
+                        <exclude>tn/esprit/_4se2/pi/mappers/DietPlanMapper.java</exclude>
+                        <exclude>tn/esprit/_4se2/pi/mappers/SportSpaceAvailabilityMapper.java</exclude>
+                        <exclude>tn/esprit/_4se2/pi/mappers/PlayerMapper.java</exclude>
+                        <exclude>tn/esprit/_4se2/pi/mappers/LoyaltyProgramMapper.java</exclude>
+                        <exclude>tn/esprit/_4se2/pi/services/FieldOwner/FieldOwnerService.java</exclude>
+                        <exclude>tn/esprit/_4se2/pi/services/Player/PlayerService.java</exclude>
+                        <exclude>tn/esprit/_4se2/pi/services/AdvertisementService.java</exclude>
+                        <exclude>tn/esprit/_4se2/pi/entities/Cart.java</exclude>
+                        <exclude>tn/esprit/_4se2/pi/restcontrollers/CartRestController.java</exclude>
+                        <exclude>tn/esprit/_4se2/pi/websocket/WebSocketEventHandler.java</exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <excludes>
+                        <exclude>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                        </exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.1.2</version>
+                <configuration>
+                    <argLine>-Dnet.bytebuddy.experimental=true</argLine>
                 </configuration>
             </plugin>
         </plugins>
     </build>
-
 </project>
